Styling/style.css
/* ... */
#gallery-navigation>h3 {
  text-align: start;
  color: var(--color-dark1);
}

#gallery-navigation>p {
  font-size: calc(var(--p-size) * 1.15);
  text-align: start;
  color: var(--color-light1);
}

#gallery-navigation>p a {
  color: var(--color-accent1);
  text-shadow: 0 0 .27rem hsl(0, 0%, 15%, 30%);
  transition: all .2s ease-in-out;
}

#gallery-navigation>p a:hover,
#gallery-navigation>p a:active {
  color: var(--color-dark1);
}

#gallery-navigation>a {
  text-decoration: none;
}

#gallery-navigation #gallery-images {
  width: 100%;
  margin-top: calc(var(--spacing-1) * 1.33);
  padding-inline: var(--spacing-1);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#gallery-navigation #gallery-images img {
  width: 95%;
  height: auto;
  margin-inline: auto;
  border-radius: 7%;
  box-shadow: 1px -1px .5rem .2rem hsl(0, 0%, 0%, .3);
  transition: transform .25s ease-out;
}

#gallery-navigation #gallery-images img:hover {
  transform: translateY(5.5%);
}

#gallery-navigation button {
  padding: calc(var(--spacing-5) * .65) var(--spacing-4);
  margin-top: calc(var(--spacing-1) * 3.15);
  margin-inline: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: calc(var(--spacing-5) * .8);
  border: calc(var(--spacing-5) * .37) solid var(--color-accent1);
  border-radius: var(--spacing-5);
  font-family: var(--font-descriptions);
  font-size: calc(var(--p-size) * 1.2);
  font-weight: 700;
  background-color: var(--color-light2);
  color: var(--color-dark1);
  transition: all .23s ease-out;
}

#gallery-navigation button:hover {
  background-color: var(--color-light1);
  transform: scale(1.04);
}

#gallery-navigation button img {
  height: calc(var(--spacing-1) * 1.5);
}

/* added responsiveness */
@media (width >=1630px) {
  #gallery-navigation {
    border-bottom: calc(var(--spacing-5) * .55) dashed var(--color-dark2);
    padding-inline: calc(var(--spacing-1) * 1.37);
  }

  #gallery-navigation button img {
    height: calc(var(--spacing-1) * 1.7);
  }
}

@media (width <=1400px) {
  #gallery-navigation #gallery-images {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(2, 1fr);
    row-gap: calc(var(--spacing-1) * 1.35);
  }

  #gallery-navigation #gallery-images img {
    width: 85%;
  }
}

@media (width <=800px) {
  #gallery-navigation {
    padding-inline: calc(var(--spacing-1) * 1.35);
  }
}

@media (width <=700px) {
  #gallery-navigation #gallery-images img {
    width: 93.5%;
    box-shadow: .65px -.7px .35rem .135rem hsl(0, 0%, 0%, .27);
  }

  #gallery-navigation button img {
    height: calc(var(--spacing-1) * 1.25);
  }
}

@media (width <=600px) {
  #gallery-navigation {
    padding-inline: var(--spacing-1);
    padding-bottom: calc(var(--spacing-1) * 2);
  }
}


@media (width <=500px) {
  #gallery-navigation {
    padding-inline: var(--spacing-2);
  }

  #gallery-navigation #gallery-images {
    grid-template-columns: 1fr;
    row-gap: var(--spacing-1);
  }

  #gallery-navigation #gallery-images img:hover {
    transform: translateY(-3.5%);
  }
}

@media (width <=415px) {
  #gallery-navigation #gallery-images img {
    width: 95.5%;
    box-shadow: .5px -.5px .25rem .12rem hsl(0, 0%, 0%, .27);
  }
}


/* Form Section */
#answer-questions {
  padding-inline: calc(var(--spacing-1) * 3.3);
  padding-block: calc(var(--spacing-2) * 1.7) calc(var(--spacing-2) * 2.2);
  border-inline: calc(var(--spacing-5) * .47) dotted var(--color-dark1);
  background-color: var(--color-secondary);
}

#answer-questions>h3 {
  text-align: center;
  font-size: var(--h2-size);
  color: var(--color-light2);
  text-shadow: 0 0 .25rem hsl(0, 0%, 11%, 25%);
}

#answer-questions #questions-form {
  width: 40%;
  margin: var(--spacing-1) auto;
  display: flex;
  flex-direction: column;
  gap: var(--spacing-3);
}

#answer-questions .questions-field {
  width: 100%;
  padding: 2rem var(--spacing-2);
  margin-inline: auto;
  border-radius: 100px;
  display: flex;
  justify-content: center;
  gap: var(--spacing-2);
  border: calc(var(--spacing-5) * 0.35) dotted var(--color-dark2);
  background-color: var(--color-primary);
  box-shadow: 0 0 .35rem .2rem hsl(0, 0%, 15%, 40%);
  animation: FadeIn 1.37s ease-in forwards;
}

/* required field indicators */
#answer-questions .questions-field[data-required="true"] legend::after {
  content: " *";
  color: var(--color-accent1);
  font-weight: bold;
}

#answer-questions .questions-legend p {
  font-size: calc(var(--h3-size) * .87);
  font-weight: 600;
  color: var(--color-dark1);
}

#answer-questions .questions-field label {
  font-size: calc(var(--p-size) * 1.25);
  display: flex;
  align-items: center;
  gap: calc(var(--spacing-5) * .65);
  cursor: pointer;
  color: var(--color-dark1);
}

#answer-questions .questions-field input[type="number"],
#answer-questions .questions-field input[name="fav-character"] {
  width: 60%;
  padding: calc(var(--spacing-5) * .55) calc(var(--spacing-5) * .9);
  border: calc(var(--spacing-5) * .21) solid var(--color-dark2);
  margin-inline: auto;
  border-radius: .7rem;
  font-family: var(--font-descriptions);
  font-size: var(--p-size);
  font-weight: 500;
  letter-spacing: .45px;
  background-color: var(--color-light1);
  color: var(--color-dark2);
  transition: all .15s ease-in-out;
}

#answer-questions .questions-field input[type="number"]:focus,
#answer-questions .questions-field input[name="fav-character"]:focus {
  outline: none;
  border: calc(var(--spacing-5) * .35) solid var(--color-secondary);
  background-color: var(--color-light2);
}

#answer-questions .questions-field input[type="radio"] {
  accent-color: var(--color-accent1);
}
/* ... */

